# con-mod

./: Cargo.toml  Makefile  README.md  spin.toml
api/: Cargo.toml
assets/: index.html  script.js  styles.css
component/: Cargo.toml
component/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
moderator/: Cargo.toml
moderator/src/: bindings.rs  lib.rs
moderator/wit/: world.wit
