[package]
name = "content-moderator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }
spin-sdk = "3.0.1"
spin-executor = "3.0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:content-moderator"

[package.metadata.component.dependencies]
